# favorite_streamers

./: .gitignore  LICENSE.txt  README.md  application.py  config_gen.py  generate_user_info.py  pyproject.toml  requirements.txt  streamer_app.spec
src/: __init__.py  config_gen.py  create_app_file.py  generate_user_info.py
src/backend/: __init__.py  command_runner.py  config_gen.py  error_handling.py  generate_user_info.py  script_locations.py  simple_output.py  streamer_output.py
src/gui/: __init__.py  config_input.py  display_streamers.py  file_upload.py  file_uploader.py  gui_generation.py  ui_builder.py
