[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "favorite_streamers"
version = "0.0.1"
authors = [
  { name="Garrett Rumschik", email="rumschik.2@gmail.com" },
]
description = "Little GUI that generates a twich user's followed streamers lis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/onlygarrett/favorite_streamers"
"Bug Tracker" = "https://github.com/onlygarrett/favorite_streamers/issues"

[testpypi]
username = "grumschik"